# agnx

./: .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  go.mod
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
book/src/: SUMMARY.md  introduction.md
cmd/agnx/: main.go
cmd/pluto/: main.go
crates/agnx/: Cargo.toml
crates/duragent/: Cargo.toml
docs/: PROJECT_STATUS.md
docs/plans/: 202601111100.project-charter.md  202601111101.architecture.md  202601111103.deployment.md  202601111200.agnx-agent-format.md
docs/specs/: 202601111100.project-charter.md  202601111101.architecture.md  202601111102.api-reference.md  202601111103.deployment.md  202601111200.agnx-agent-format.md  202601111200.duragent-format.md  202602081000.context-window-management.md  PROJECT_STATUS.md
internal/api/: agents.go  agents_test.go  health.go  health_test.go  response.go  response_test.go  server.go  server_test.go
internal/buildinfo/: buildinfo.go
internal/config/: config.go  config_test.go
src/: build_info.rs  config.rs  lib.rs  main.rs  response.rs  server.rs
src/agent/: mod.rs  provider.rs  spec.rs  store.rs
src/commands/: chat.rs  mod.rs  serve.rs
src/handlers/: health.rs  mod.rs
src/llm/: anthropic.rs  error.rs  mod.rs  openai.rs  provider.rs  registry.rs  types.rs
src/session/: events.rs  mod.rs  snapshot.rs  stream.rs
tests/: api_test.rs  disconnect_behavior_test.rs  session_persistence_test.rs  session_resume_test.rs  sse_streaming_test.rs
tests/common/: mod.rs
(+152 files in other folders)
