[package]
name = "agnx"
version = "0.1.0"
edition = "2024"
description = "A minimal and fast self-hosted runtime for durable and portable AI agents"
license = "MIT"
repository = "https://github.com/giosakti/agnx"

[dependencies]
# Async runtime
async-trait = "0.1"
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["timeout"] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[lib]
name = "agnx"
path = "src/lib.rs"

[[bin]]
name = "agnx"
path = "src/main.rs"
